--- a/app/views/wines/index.html.haml
+++ b/app/views/wines/index.html.haml
@@ -12,11 +12,4 @@
     = render 'wines-box'
 .content-down
   = image_tag "wine.jpg", class: 'content-down_img'
-.footer
-  .footer-box
-    %h2 BimiWineについて
-    %ul
-      %li 会社概要
-      %li プレスリリース
-      %li プライバシーポリシー
-      %li ワインの楽しみ方
+= render 'module/footer'
