--- a/app/views/module/_footer.html.haml
+++ b/app/views/module/_footer.html.haml
@@ -1,6 +1,6 @@
 .footer
   .footer-box_left
-    = image_tag 'nophone.jpg', class: "footer-box_left_img"
+    = image_tag 'txt.gif', class: "footer-box_left_img"
   .footer-box_right
     %h2 BimiWineについて
     %ul
