--- a/app/views/module/_header.html.haml
+++ b/app/views/module/_header.html.haml
@@ -6,8 +6,8 @@
       %input{type: "seach", name: "header-seach", placeholder: "  search for wine...", class: "header-seach"}
   .top-header__down
     .top-header__down__new
-      = link_to "#" do
+      = link_to "/users/sign_up" do
         新規会員登録
     .top-header__down__login
-      = link_to "#" do
+      = link_to "/users/sign_in" do
         ログイン
