--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,7 +5,7 @@
   .content3-title
     %span Name: #{@user.nickname}
   .content3-menu
-    = link_to '#' do
+    = link_to '/wines/new' do
       %i.far.fa-plus-square
       %span 投稿
     = link_to "#" do
