--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -40,6 +40,9 @@
   width: 50%;
   padding-bottom: 10%;
   padding-top: 5%;
+   ul{
+    display: initial;
+  }
   li{
     height: 200px;
     width:  32%;
