--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,9 @@
 @import 'modules/reset';
-@import 'wines-top';
+@import 'wines/wines-top';
 @import 'modules/header';
 @import 'modules/footer';
-@import 'users-new';
-@import 'mypage';
-@import 'post';
-@import 'post-complete';
+@import 'users/users-new';
+@import 'users/mypage';
+@import 'users/post';
+@import 'wines/post-complete';
+@import 'wines/wines-show';
