--- a/app/views/wines/new.html.haml
+++ b/app/views/wines/new.html.haml
@@ -24,4 +24,4 @@
       = f.collection_check_boxes :feature_ids, @feature, :id, :name, include_hidden: false do |m|
         = m.label { m.check_box + m.text }
     .postbody-submit
-      = f.submit "投稿", class: "submit"
+      = f.submit "SENT", class: "submit"
