--- a/app/assets/stylesheets/wines/_wines-top.scss
+++ b/app/assets/stylesheets/wines/_wines-top.scss
@@ -1,6 +1,5 @@
 .content{
   width: 100%;
-  height: 500px;
   &-down{
     background-color: #f0f0f0;
     &_img{
@@ -20,15 +19,17 @@
 }
 
 .wines{
-  height: 65%;
   width: 70%;
+  height: 100vh;
   margin: 0 auto;
+  overflow: scroll;
   &-box{
-    width: 24%;
-    height: 100%;
+    width: 25%;
+    height: 340px;
     border-radius: 5%;
     margin-top: 5%;
     margin-right: 4%;
+    margin-bottom: 5%;
     border: solid 1px #5555;
     display: inline-block;
     &_phot{
