--- a/app/views/wines/show.html.haml
+++ b/app/views/wines/show.html.haml
@@ -24,3 +24,6 @@
         = link_to edit_wine_path do
           .wine-editbtn
             Edit
+        = link_to deletebefore_wine_path do
+          .wine-editbtn
+            %i.fas.fa-trash-alt
