--- a/app/assets/stylesheets/wines/_wines-top.scss
+++ b/app/assets/stylesheets/wines/_wines-top.scss
@@ -59,6 +59,10 @@
       padding-right: 15%;
       font-size: 12px;
       color: deeppink;
+      a {
+        text-decoration: none;
+        color: unset;
+      }
     }
   }
 }
