--- a/app/views/wines/index.html.haml
+++ b/app/views/wines/index.html.haml
@@ -18,11 +18,11 @@
             - if current_user.already_liked?(wine)
               = link_to "/wines/#{wine.id}/likes/:id", method: :delete do
                 %i.fas.fa-heart
-              %span 10
+              %span #{Like.where(wine_id: wine.id).count}
             - else
               = link_to wine_likes_path(wine.id), method: :post do
                 %i.far.fa-heart
-              %span 10
+              %span #{Like.where(wine_id: wine.id).count}
 .content-down
   = image_tag "wine.jpg", class: 'content-down_img'
 = render 'module/footer'
