--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -11,7 +11,7 @@
     = link_to "#" do
       %i.far.fa-heart
       %span いいね一覧
-    = link_to "#" do
+    = link_to "/users/edit" do
       %i.far.fa-address-card
       %span プロフィール編集
     %i.fas.fa-sign-out-alt
