--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,7 +8,7 @@
     = link_to '/wines/new' do
       %i.far.fa-plus-square
       %span 投稿
-    = link_to "#" do
+    = link_to "/wines/goodpage" do
       %i.far.fa-heart
       %span いいね一覧
     = link_to "/users/edit" do
