--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import 'wines/wines-top';
 @import 'modules/header';
 @import 'modules/footer';
+@import 'modules/mediaheader.scss';
 @import 'users/users-new';
 @import 'users/mypage';
 @import 'users/post';
