--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,8 @@
 %html
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0", name: "viewport"}
+    %meta{:content => "initial-scale=1, viewport-fit=cover", :name => "viewport"}/
     %title Bimiwine
     = csrf_meta_tags
     = csp_meta_tag
@@ -9,5 +11,6 @@
     %script{src: "https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"}
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{href: "https://use.fontawesome.com/releases/v5.6.3/css/all.css", rel: "stylesheet"}/
+    %link{href: "https://fonts.googleapis.com/css?family=Londrina+Shadow", rel: "stylesheet"}/
   %body
     = yield
