--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,22 +1,20 @@
 .footer{
-  width: 100%;
-  height: 300px;
   background-color: #f0f0f0;
   &-box_left{
     width: 8%;
     display: inline-block;
     padding-left: 10%;
     img{
-      height: 150px;
+      width: 70%;
     }
   }
+
   &-box_right{
     height: 80%;
-    width: 30%;
     margin-left: 5%;
     display: inline-block;
     h2{
-      padding-top: 10%;
+      padding-top: 5%;
       font-size: 16px;
       font-weight: 600;
       color: darkslategrey;
@@ -27,7 +25,21 @@
     li{
       color: darkgray;
       font-size: 13px;
-      padding-top: 5%;
+    }
+  }
+}
+
+@media (max-width: 480px){
+  .footer{
+    position: fixed;
+    height: 20%;
+    width: 100%;
+    bottom: env(safe-area-inset-bottom);
+    &-box_left{
+      width: 20%;
+      display: inline-block;
+      padding-left: 5%;
+      bottom: env(safe-area-inset-bottom);
     }
   }
 }
