--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP');
 @import 'modules/reset';
 @import 'wines/wines-top';
-@import 'modules/header';
 @import 'modules/footer';
 @import 'modules/mediaheader.scss';
 @import 'users/users-new';
