--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,6 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     %link{href: "https://use.fontawesome.com/releases/v5.6.3/css/all.css", rel: "stylesheet"}/
     %link{href: "https://fonts.googleapis.com/css?family=Londrina+Shadow", rel: "stylesheet"}/
+    %link{href: "https://fonts.googleapis.com/css?family=Kaushan+Script", rel: "stylesheet"}/
   %body
     = yield
