--- a/app/views/wines/index.html.haml
+++ b/app/views/wines/index.html.haml
@@ -1,6 +1,5 @@
 .header
-  = link_to '/wines/index' do
-    = image_tag 'icon.jpg', class: 'bimi-m'
+  = link_to '/wines/index' ,style: "text-decoration: none" do
     .title
       %p Bimi Wine
 = render 'module/header'
