--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,6 @@
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{content: "width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0", name: "viewport"}
-    %meta{:content => "initial-scale=1, viewport-fit=cover", :name => "viewport"}/
     %title Bimiwine
     = csrf_meta_tags
     = csp_meta_tag
@@ -13,5 +12,6 @@
     %link{href: "https://use.fontawesome.com/releases/v5.6.3/css/all.css", rel: "stylesheet"}/
     %link{href: "https://fonts.googleapis.com/css?family=Londrina+Shadow", rel: "stylesheet"}/
     %link{href: "https://fonts.googleapis.com/css?family=Kaushan+Script", rel: "stylesheet"}/
+    %link{href: "https://fonts.googleapis.com/css?family=Permanent+Marker", rel: "stylesheet"}>/
   %body
     = yield
