--- a/app/assets/stylesheets/modules/_footer.scss
+++ b/app/assets/stylesheets/modules/_footer.scss
@@ -1,9 +1,11 @@
 .footer{
   background-color: #f0f0f0;
+  height: 170px;
   &-box_left{
     width: 8%;
     display: inline-block;
     padding-left: 10%;
+    padding-top: 1.5%;
     img{
       width: 70%;
     }
