--- a/app/assets/stylesheets/modules/_mediaheader.scss
+++ b/app/assets/stylesheets/modules/_mediaheader.scss
@@ -1,3 +1,8 @@
+.header{
+  a{
+    text-decoration: none;
+  }
+}
 .title{
   font-family: 'Permanent Marker', cursive;
   color: darkgoldenrod;
@@ -49,8 +54,8 @@
     &__login{
       display: inline-block;
       a{
-        color: red;
         text-decoration: none;
+        color: red;
       }
     }
   }
