--- a/app/assets/stylesheets/users/_users-new.scss
+++ b/app/assets/stylesheets/users/_users-new.scss
@@ -5,12 +5,22 @@
     margin: 0 auto;
     width: 70%;
     input{
+      width: 45%;
       border: 2px solid #aaa;
       border-radius: 4px;
-      margin: 8px 0;
       outline: none;
       box-sizing: border-box;
       transition: 0.3s;
+      padding: 1%;
+      margin: 6% 0% 0% 27%;
+    }
+    :focus{
+      -webkit-appearance: none;
+      border-color: dodgerBlue;
+      box-shadow: 0 0 8px 0 dodgerBlue;
+    }
+    :focus + i{
+      color: dodgerBlue;
     }
   }
 
@@ -19,6 +29,10 @@
     width: 70%;
     margin: 0 auto;
     .submit-btn{
+      width: 45%;
+      padding: 1%;
+      margin-left: 27%;
+      margin-bottom: 10%;
       display: inline-block;
       background-color: #ffa300;
       font-size: 16px;
@@ -32,32 +46,19 @@
 
 // Media用
 @media (max-width: 480px){
+  
   .content2{
     padding-top: 20%;
-  }
-
+  
   .field{
     position: relative;
     margin: 0 auto;
     width: 70%;
     input{
       width: 100%;
-      border: 2px solid #aaa;
-      border-radius: 4px;
       margin: 8px 0;
-      outline: none;
       padding: 8px;
       padding-left: 14%;
-      box-sizing: border-box;
-      transition: 0.3s;
-    }
-    :focus{
-      -webkit-appearance: none;
-      border-color: dodgerBlue;
-      box-shadow: 0 0 8px 0 dodgerBlue;
-    }
-    :focus + i{
-      color: dodgerBlue;
     }
 
     i{
@@ -72,14 +73,11 @@
   .actions{
    .submit-btn{
       -webkit-appearance: none;
-      background-color: #ffa300;
       font-size: 1rem;
-      color: #FFF;
-      font-weight: bold;
-      border-radius: 4px;
-      border-bottom: 4px solid #d37800;
       width: 100%;
       padding: 4%;
+      margin: 0;
     }
   }
+ }
 }
