--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -9,14 +9,14 @@
       = f.text_field :nickname, placeholder: "ニックネーム" ,autocomplete: "nickname"
       %i.fa.fa-user.fa-lg.fa-fw{"aria-hidden" => "true"}
     .field
-      = f.email_field :email, autofocus: true, placeholder: "メールアドレス", autocomplete: "email"
+      = f.email_field :email, placeholder: "メールアドレス", autocomplete: "email"
       %i.fa.fa-envelope.fa-lg.fa-fw{"aria-hidden" => "true"}
     .field
       = f.password_field :password, placeholder: "6文字以上パスワード" ,autocomplete: "new-password"
       %i.fa.fa-key{"aria-hidden" => "true"}
     .field
-      = f.password_field :password_confirmation, autocomplete: "パスワード確認用"
+      = f.password_field :password_confirmation, placeholder: "パスワード確認用" ,autocomplete: "パスワード確認用"
       %i.fa.fa-key{"aria-hidden" => "true"}
     .actions
       = f.submit "登録", class: "submit-btn"
-  = render 'module/footer'
+= render 'module/footer'
