--- a/app/assets/stylesheets/wines/_wines-show.scss
+++ b/app/assets/stylesheets/wines/_wines-show.scss
@@ -64,5 +64,13 @@
       }
     }
   }
+}
 
+//Media用
+@media (max-width: 480px){
+  .wines-show__content{
+    &-box{
+      width: 100%;
+    }
+  }
 }
