--- a/app/assets/stylesheets/users/_mypage.scss
+++ b/app/assets/stylesheets/users/_mypage.scss
@@ -55,3 +55,37 @@
     border-radius: 6%;
   }
 }
+
+@media (max-width: 480px){
+  .content3{
+    &-title{
+      width: 100%;
+      height: 30%;
+      font-size: 1rem;
+      padding-left: 3%;
+    }
+    &-menu{
+      width: 100%;
+      padding-left: 0;
+      padding-top: 2%;
+      i {
+        padding-left: 3%;
+      }
+      span {
+        display: none;
+      }
+    }
+  }
+
+  .post-box{
+    width: 100%;
+    padding-top: 0;
+    padding-bottom: 0;
+    li{
+      width: 49%;
+      height: 170px;
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
