--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,16 +1,16 @@
 .header
-  = link_to '/wines/index' do
-    = image_tag 'IMG_7119.jpg', class: 'bimi-m'
+  = link_to '/wines/index' ,style: "text-decoration: none" do
+    .title
+      %p Bimi Wine
 .content2
-  .content2-title
-    %span プロフィール編集
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :NickName
-    = f.text_field :nickname, placeholder: "テスト" ,autocomplete: "nickname"
-  .field
-    = f.label :email
-    = f.email_field :email, autofocus: true, placeholder: "test@co.jp", autocomplete: "email"
-  .actions
-    = f.submit "Update"
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    .field
+      = f.text_field :nickname, placeholder: "テスト" ,autocomplete: "nickname"
+      %i.fa.fa-user.fa-lg.fa-fw{"aria-hidden" => "true"}
+    .field
+      = f.email_field :email, placeholder: "test@co.jp", autocomplete: "email"
+      %i.fa.fa-envelope.fa-lg.fa-fw{"aria-hidden" => "true"}
+    .actions
+      = f.submit "Update", class: "submit-btn"
+= render 'module/footer'
