--- a/app/views/wines/new.html.haml
+++ b/app/views/wines/new.html.haml
@@ -1,6 +1,7 @@
-.header2
-  = link_to '/wines/index' do
-    = image_tag 'IMG_7119.jpg', class: 'bimi-m2'
+.header
+  = link_to '/wines/index' ,style: "text-decoration: none" do
+    .title
+      %p Bimi Wine
 = form_with(model: @wine, local: true) do |f|
   .postbody
     .postbody-header
