--- a/app/views/wines/show.html.haml
+++ b/app/views/wines/show.html.haml
@@ -1,6 +1,7 @@
-.header2
-  = link_to '/wines/index' do
-    = image_tag 'IMG_7119.jpg', class: 'bimi-m2'
+.header
+  = link_to '/wines/index' ,style: "text-decoration: none" do
+    .title
+      %p Bimi Wine
 .wines-show__content
   .wines-show__content-box
     .wines-show__content-box_name
