--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,5 +13,6 @@
     %link{href: "https://fonts.googleapis.com/css?family=Londrina+Shadow", rel: "stylesheet"}/
     %link{href: "https://fonts.googleapis.com/css?family=Kaushan+Script", rel: "stylesheet"}/
     %link{href: "https://fonts.googleapis.com/css?family=Permanent+Marker", rel: "stylesheet"}>/
+    %script{src: "https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"}
   %body
     = yield
