--- a/app/views/wines/postcomplete.html.haml
+++ b/app/views/wines/postcomplete.html.haml
@@ -1,6 +1,7 @@
-.header2
-  = link_to '/wines/index' do
-    = image_tag 'IMG_7119.jpg', class: 'bimi-m2'
+.header
+  = link_to '/wines/index' ,style: "text-decoration: none" do
+    .title
+      %p Bimi Wine
 .post-complete
   .post-complete__body
     投稿が完了しました。
