--- a/app/assets/stylesheets/users/_post.scss
+++ b/app/assets/stylesheets/users/_post.scss
@@ -105,7 +105,12 @@
       margin: 0 auto;
       display: block;
       width: 80%;
-      
+      background-color: #ffa300;
+      font-size: 16px;
+      color: #FFF;
+      font-weight: bold;
+      border-radius: 4px;
+      border-bottom: 4px solid #d37800;
     }
   }
 }
@@ -124,4 +129,35 @@
   transition: 0.3s ease-out;
   display: block;
   color: #fff;
+}
+
+@media (max-width: 480px){
+  .postbody{
+    &-image{
+      width: 90%;
+    }
+    &-name{
+      width: 80%;
+    }
+    &-shopname{
+      width: 80%;
+    }
+    &-comment{
+      width: 80%;
+    }
+    &-category{
+      width: 80%;
+      height: 10%;
+    }
+    &-submit{
+      padding-top: 5%;
+      width: 70%;
+      margin: 0 auto;
+      .submit{
+        -webkit-appearance: none;
+        width: 80%;
+        padding: 1%;
+      }
+    }
+  }
 }
