--- a/app/assets/stylesheets/wines/_wines-top.scss
+++ b/app/assets/stylesheets/wines/_wines-top.scss
@@ -22,7 +22,9 @@
   width: 70%;
   height: 100vh;
   margin: 0 auto;
-  overflow: scroll;
+  nav.pagination {
+    display: none;
+  }
   &-box{
     width: 25%;
     height: 340px;
@@ -72,20 +74,19 @@
     font-weight: 900;
     font-size: 1.4rem;
     display: block;
-    padding-top: 15%;
     text-align: center;
     font-family: 'Kaushan Script', cursive;
   }
 
   .wines{
-    width: 97%;
+    width: 90%;
     &-box{
-    width: 47%;
-    height: 30%;
+    width: 90%;
+    height: 50%;
     margin-top: 1%;
     margin-right: 0;
     margin-bottom: 1%;
-    margin-left: 1%;
+    margin-left: 5%;
     a {
       text-decoration: none;
     }
